Switched to OpenJDK 12 / jpackage